--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -15,7 +15,7 @@ WineQuality
 <!-- nav bar -->
 
 <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="/">WineQualityPrediction</a>
+    <a class="navbar-brand" href="/">Shubham WineQualityPrediction</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,19 +58,19 @@ WineQuality
                                 placeholder="citric acid expected range 0.0 to 1.0"></textarea>
                             <textarea class="form-control" name="residual_sugar" rows="1"
                                 placeholder="residual sugar expected range 0.9 to 15.5"></textarea>
-                            <textarea class="form-control" name="chlorides" rows="1" 
+                            <textarea class="form-control" name="chlorides" rows="1"
                                 placeholder="chlorides expected range 0.012 to 0.611"></textarea>
                             <textarea class="form-control" name="free_sulfur_dioxide" rows="1"
                                 placeholder="free sulfur dioxide expected range 1.0 to 72.0"></textarea>
                             <textarea class="form-control" name="total_sulfur_dioxide" rows="1"
                                 placeholder="total sulfur dioxide expected range 6.0 to 289.0"></textarea>
-                            <textarea class="form-control" name="density" rows="1" 
+                            <textarea class="form-control" name="density" rows="1"
                                 placeholder="density expected range 0.99007 to 1.00369"></textarea>
-                            <textarea class="form-control" name="pH" rows="1" 
+                            <textarea class="form-control" name="pH" rows="1"
                                 placeholder="pH expected range 2.74 to 4.01"></textarea>
-                            <textarea class="form-control" name="sulphates" rows="1" 
+                            <textarea class="form-control" name="sulphates" rows="1"
                                 placeholder="sulphates expected range 0.33 to 2.0"></textarea>
-                            <textarea class="form-control" name="alcohol" rows="1" 
+                            <textarea class="form-control" name="alcohol" rows="1"
                                 placeholder="alcohol expected range 8.4 to 14.9"></textarea>
 
                         </div>
